# esp32-camera-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  sdkconfig.defaults
src/: lib.rs
