[package]
name = "esp32-camera-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = "0.43.1"
esp-idf-sys = "0.34.1"

[build-dependencies]
embuild = "0.31.4"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "esp32-camera"
bindings_header = "bindings.h"
bindings_module = "esp_idf_camera"
